# vecta

./: .gitignore  CLI_GUIDE.md  COMPLETE_EXPANSION_SUMMARY.md  COMPLETE_IMPLEMENTATION_SUMMARY.md  CONTRIBUTING.md  DATA_EXTRACTION_SUMMARY.md  DEPLOYMENT.md  EXPANSION_TO_50_EXAMPLES.md  FINAL_IMPLEMENTATION_SUMMARY.txt  FINAL_SUMMARY.txt  GITHUB_SETUP.md  GPU_DEPLOYMENT_GUIDE.md  HPC_CLI_GUIDE.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_GUIDE.md  MASTER_DOCUMENTATION_INDEX.md  NEUROLOGIST_VALIDATION_SYSTEM.md  PHASE1_NEUROLOGY_FOCUS.md  PROMPT_ENGINEERING_ANALYSIS.md  PROMPT_IMPROVEMENTS.md  QUICK_START_EXAMPLES.md  QUICK_START_TWO_PAGES.md  README.md  README_PROMPT_ENHANCEMENTS.md  REQUIREMENTS_AND_COSTS.md  ROADMAP.md  START_APP_NOW.md  START_HERE.md  TWO_PAGE_SYSTEM_GUIDE.md  UI_CLEANUP_SUMMARY.md  UI_UX_IMPROVEMENTS.md  USER_GUIDE.md  VALIDATION_IMPLEMENTATION_CHECKLIST.md  app.py  auto_learn_scheduler.py  config.py  database.py  deleted_cache_cleanup_items.csv  gunicorn.conf.py  gunicorn_config.py  (+13 more)
.github/workflows/: ci.yml  docs.yml
content/: CONTRIBUTING.md  README.md  pyproject.toml
content/dbi/: DBI_v1_SPECIFICATION.md  README.md  __init__.py  dbi_v1_config.yaml
core/: README.md  database.py
data/: few_shot_examples.json  few_shot_examples_original_22.json  learning_history.json  sample_medical_data.txt  validation.db
data/guidelines/: neurology_guidelines.json
dbi/: Makefile  README.md  mkdocs.yml  qc_spotcheck_template.csv  scoring.py
dbi/docs/: contributing.md  glossary.md  index.md  spec.md
docs/: README.md
learning/: README.md  auto_learn_scheduler.py  learning_engine.py
logs/: ACCESS_URLS.txt
plan/: Pipelines_and_BIDS_Documentation.docx  build_pipelines_docx.py
routes/: validation.py
scripts/: README.md  init_validation_system.py  med42_service.slurm  test_learning_loop.py  vecta
services/: __init__.py  file_processor.py  med42_model.py  prompt_engine.py
tests/: test_results.json
utils/: __init__.py  few_shot_loader.py  logging_config.py  port_finder.py  rag_system.py  validation.py
vecta/: .gitignore  AI_Ready_Acquisition_Standards_by_Modality.docx  CONTRIBUTING.md  LICENSE  MR_Acquisition_Automation_and_BIDS_Inspired_Naming_Conventions.docx  README.md  Research_Project_Documentation_DWI_DBI.docx  build_ai_ready_acquisition_sop_docx.py  build_mr_acquisition_automation_conventions_docx.py  build_neuroimage_phased_plan_docx.py  build_phase5_prereq_docx.py  build_research_docx.py  build_thought_experiment_docx.py  neuroimage_paper_phased_plan.docx  phase0_signoff_neuroimage.docx  phase3_frozen_for_manuscript.docx  pyproject.toml  thought_experiment.docx
vecta/.github/workflows/: ci.yml
vecta/cidur_dbi/: DBI_v1_SPECIFICATION.md  README.md  __init__.py  dbi_v1_config.yaml  phase4_build_sample_manifest.py  phase4_compare_labels.py  phase4_copy_sample.py  phase4_paths.py  requirements.txt  run_audit.py  run_dcm2niix_batch.py  scoring.py
vecta/cidur_dbi/outputs/: per_series.csv  per_session.csv  run_metadata.json  table1_dbi_by_scanner.csv
vecta/cidur_dbi/outputs_dcm2niix_v1freeze/: conversion_log.csv  dcm2niix_environment.json  table2_conversion_by_scanner.csv  table2_conversion_by_scanner_class.csv
vecta/cidur_dbi/outputs_phase4/: phase4_labeling_manifest.csv  phase4_labeling_meta.json
vecta/cidur_dbi/tests/: test_dcm2niix_batch.py  test_phase4.py  test_scoring.py
vecta/dbi/: README.md  __init__.py  requirements.txt  run_audit.py
vecta/writing/: DBI_v1_Manuscript.docx  REFERENCE_READING_LIST.md  build_manuscript_docx.py  references.bib
(+27 files in other folders)
