[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "data-birth-integrity"
version = "1.0.5"
description = "Data Birth Integrity (DBI) — a modular 0-1 scoring framework for assessing automation-readiness of clinical DICOM series in neuroimaging research."
readme = "dbi/README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "VECTA / DBI contributors"},
]
keywords = ["DICOM", "neuroimaging", "data-quality", "BIDS", "MRI", "metadata", "automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]
dependencies = [
    "pydicom>=2.4.0",
    "PyYAML>=6.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "seaborn>=0.12",
]

[project.urls]
Homepage = "https://github.com/phindagijimana/vecta"
Documentation = "https://github.com/phindagijimana/vecta/blob/main/USER_GUIDE.md"
Repository = "https://github.com/phindagijimana/vecta"
Issues = "https://github.com/phindagijimana/vecta/issues"

[project.scripts]
dbi-audit = "dbi.run_audit:main"
dbi-convert = "dbi.run_dcm2niix_batch:main"

[tool.setuptools.packages.find]
include = ["dbi*"]

[tool.setuptools.package-data]
dbi = [
    "dbi_v1_config.yaml",
    "DBI_v1_SPECIFICATION.md",
    "qc_spotcheck_template.csv",
]

[tool.pytest.ini_options]
testpaths = ["dbi/tests"]
